--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@iconify/vue": "^5.0.0",
     "axios": "^1.10.0",
     "element-plus": "^2.10.4",
     "lodash": "^4.17.21",
