--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@iconify/vue": "^5.0.0",
     "axios": "^1.10.0",
+    "element": "^0.1.4",
     "element-plus": "^2.10.4",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "pinia": "^3.0.3",
+    "plus": "^0.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
