--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
     "@iconify/vue": "^5.0.0",
     "axios": "^1.10.0",
     "element": "^0.1.4",
