--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "plus": "^0.1.0",
+    "qrcode.vue": "^3.6.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
